Fix mascot behind forced on overriding user setting. Doh!

--- a/css/library.css
+++ b/css/library.css
@@ -201,7 +201,6 @@
   background-repeat: no-repeat;
   background-position: right bottom;
   pointer-events: none;
-  opacity: 1;
   transition: opacity 2s ease 1s;
   z-index: 10;
 }
